# photoscrub

./: LICENSE  README.md  pyproject.toml
Display referenced photo.workflow/Contents/: Info.plist  document.wflow
photoscrub/: main.py
