[tool.poetry]
name = "photoscrub"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
osxphotos = "^0.46.1"
python = ">=3.7,<3.11"
PyQt6 = "^6.2.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.scripts]
photoscrub = "photoscrub.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
